Fix issue where loading animation was not visible for Firefox users

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -933,6 +933,7 @@ sign-up-panel::after {
   position: absolute;
   overflow: hidden;
   display: none;
+  top: 49px;
 }
 
 .fx-relay-menu-loading-bar-wrapper {
